--- a/CS/MainWindow.xaml
+++ b/CS/MainWindow.xaml
@@ -1,42 +1,43 @@
-<dx:DXWindow 
+<dx:ThemedWindow
     x:Class="DXSample.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
     xmlns:dxdo="http://schemas.devexpress.com/winfx/2008/xaml/docking"
-    dx:ThemeManager.ThemeName="VS2010"
-    Title="MainWindow" Height="500" Width="700">
+    Title="MainWindow"
+    Width="700"
+    Height="500"
+    dx:ThemeManager.ThemeName="VS2019Blue">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <dxdo:DockLayoutManager Name="manager">
             <dxdo:LayoutGroup Orientation="Horizontal">
                 <dxdo:LayoutGroup Orientation="Vertical">
                     <dxdo:DocumentGroup>
-                        <dxdo:DocumentPanel Caption="MainWindow.xaml"/>
-                        <dxdo:DocumentPanel Caption="MainWindow.xaml.cs"/>
+                        <dxdo:DocumentPanel Caption="MainWindow.xaml" />
+                        <dxdo:DocumentPanel Caption="MainWindow.xaml.cs" />
                     </dxdo:DocumentGroup>
                     <dxdo:TabbedGroup ItemHeight="150">
-                        <dxdo:LayoutPanel Caption="Error List"/>
-                        <dxdo:LayoutPanel Caption="Output"/>
-                        <dxdo:LayoutPanel Caption="Breakpoints"/>
+                        <dxdo:LayoutPanel Caption="Error List" />
+                        <dxdo:LayoutPanel Caption="Output" />
+                        <dxdo:LayoutPanel Caption="Breakpoints" />
                     </dxdo:TabbedGroup>
                 </dxdo:LayoutGroup>
-                <dxdo:LayoutPanel Caption="Solution Explorer" ItemWidth="150"/>
+                <dxdo:LayoutPanel Caption="Solution Explorer" ItemWidth="150" />
             </dxdo:LayoutGroup>
             <dxdo:DockLayoutManager.AutoHideGroups>
                 <dxdo:AutoHideGroup DockType="Left">
-                    <dxdo:LayoutPanel Caption="Toolbox"/>
-                    <dxdo:LayoutPanel Caption="Server Explorer"/>
+                    <dxdo:LayoutPanel Caption="Toolbox" />
+                    <dxdo:LayoutPanel Caption="Server Explorer" />
                 </dxdo:AutoHideGroup>
                 <dxdo:AutoHideGroup DockType="Right">
-                    <dxdo:LayoutPanel Caption="Properties"/>
+                    <dxdo:LayoutPanel Caption="Properties" />
                 </dxdo:AutoHideGroup>
             </dxdo:DockLayoutManager.AutoHideGroups>
         </dxdo:DockLayoutManager>
-        <StackPanel Grid.Row="1">
-        </StackPanel>
-	</Grid>
-</dx:DXWindow>
+        <StackPanel Grid.Row="1" />
+    </Grid>
+</dx:ThemedWindow>
